syntax = "proto3";

package media_signaling_package;

// Service definition for bidirectional communication
service MediaSignaling {
 // Health check
 rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}


// Health check messages
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
